--- a/2014/90m paper/elastic_90m_npb.tex
+++ b/2014/90m paper/elastic_90m_npb.tex
@@ -39,7 +39,7 @@
 
 \begin{frontmatter}
 
-\title{Evidence for Non-Exponential Elastic Proton-Proton Differential Cross-Section at Low $|\hbox{t}|$ and $\sqrt{\hbox{s}}$ = 8 TeV by TOTEM at the CERN LHC}
+\title{Evidence for Non-Exponential Elastic Proton-Proton Differential Cross-Section at Low $|\hbox{t}|$ and $\sqrt{\hbox{s}}$ = 8 TeV by TOTEM}
 
 \input authorlist_npb
 
@@ -51,9 +51,9 @@ The TOTEM experiment has made a high-precision measurement of the elastic
 proton-proton differential cross-section at the centre-of-mass energy 
 $\sqrt s = 8\un{TeV}$ based on a high-statistics data sample obtained with 
 the $\beta^* = 90\un{m}$ optics. 
-Both statistical and systematic uncertainties remain below $1\un{\%}$ (except for the contribution from the overall normalisation). This unprecedented precision allows to exclude a purely exponential differential cross-section in the range of four-momentum transfer squared $0.027 < |t| < 0.2\un{GeV^2}$ with a significance greater than $7\un{\sigma}$.
+Both the statistical and systematic uncertainties remain below $1\un{\%}$ (except for the contribution from the overall normalisation). This unprecedented precision allows to exclude a purely exponential differential cross-section in the range of four-momentum transfer squared $0.027 < |t| < 0.2\un{GeV^2}$ with a significance greater than $7\un{\sigma}$.
 %
-Two extended parametrisations, with quadratic and cubic polynomials in the exponent, are shown to be well compatible with the data. Using them for differential cross-section extrapolation to $t=0$, and further applying the optical theorem, yields total cross-section estimates $(100.8 \pm 2.1)\un{mb}$ and $(101.2 \pm 2.1)\un{mb}$, well compatible with previous TOTEM measurements.
+Two extended parametrisations, with quadratic and cubic polynomials in the exponent, are shown to be well compatible with the data. Using them for the differential cross-section extrapolation to $t=0$, and further applying the optical theorem, yields total cross-section estimates $(100.8 \pm 2.1)\un{mb}$ and $(101.2 \pm 2.1)\un{mb}$, well compatible with previous TOTEM measurements.
 \end{abstract}
 
 \begin{keyword}
