--- a/2014/90m paper/results.tex
+++ b/2014/90m paper/results.tex
@@ -54,7 +54,7 @@ Using the COMPETE~\cite{compete} preferred-model extrapolation of $\rho = 0.140\
 		N_b &= 3:\quad \sigma_{\rm tot} = (101.2 \pm 2.1)\un{mb}\ ,\\	% A = 533.5 +- 21.9
 	\end{aligned}
 \end{equation}
-which are well compatible with the previous measurement using the luminosity-independent method~\cite{prl111}.
+which are well compatible with the previous measurement using the luminosity-independent \linebreak method~\cite{prl111}.
 %for the first time using a non-exponential extrapolation to $t=0$.
 
 \begin{table}
@@ -88,7 +88,7 @@ $3$ & $25.5/26 = 0.98$ & $0.49$ & $0.69\un{\sigma}$ \cr
 \includegraphics{fig/t_dist_rel_with_fits.pdf}
 \vskip-4mm
 \caption{%
-Differential cross-section using the ``optimised'' binning and plotted as relative difference from a reference exponential (see vertical axis). The black dots represent data points with statistical uncertainty bars. The coloured lines correspond to fits with parametrisation Eq.~(\ref{eq:fit param}) and different numbers of parameters in the exponent. The red line lies seemingly too high with respect to the data points, which is a consequence of the systematic degrees of freedom included in the fit (some of the effects in Figure~\ref{fig:syst unc} may flatten the distribution at the expense of changing the overall normalisation). The yellow band corresponds to the full systematic uncertainty, the brown-hatched one includes all systematic contributions except the normalisation. Both bands are centred around the fit curve with $N_b = 3$.
+Differential cross-section using the ``optimised'' binning and plotted as relative difference from a reference exponential (see vertical axis). The black dots represent data points with statistical uncertainty bars. The coloured lines correspond to fits with parametrisation Eq.~(\ref{eq:fit param}) and different numbers of parameters in the exponent. The red line lies seemingly too high with respect to the data points, which is a consequence of the systematic degrees of freedom included in the fit (some of the effects in Figure~\ref{fig:syst unc} may flatten the distribution which at the same time changes the overall normalisation). The yellow band corresponds to the full systematic uncertainty, the brown-hatched one includes all systematic contributions except the normalisation. Both bands are centred around the fit curve with $N_b = 3$.
 }
 \label{fig:data rel ob}
 \end{center}
