--- a/2014/90m paper/results.tex
+++ b/2014/90m paper/results.tex
@@ -34,7 +34,7 @@ The fits have been performed by the standard least-squares method, in particular
 	\Delta = (\hbox{data} - \hbox{fit})\ ,\qquad
 	\mat V = \mat V_{\rm stat} + \mat V_{\rm syst}\ ,
 \end{equation}
-where $\Delta$ is a vector of differences between the differential cross-section data and a fit function evaluated at the bin representative points (see Table~\ref{tab:data}). The covariance matrix $\mat V$ is given by the sum of the statistical component $\mat V_{\rm stat}$ (statistical uncertainty from Table~\ref{tab:data} on the diagonal) and the systematic component $\mat V_{\rm stat}$ (see Eq.~(\ref{eq:covar mat})).
+where $\Delta$ is a vector of differences between the differential cross-section data and a fit function evaluated at the bin representative points (see Table~\ref{tab:data}). The covariance matrix $\mat V$ is given by the sum of the statistical component $\mat V_{\rm stat}$ (statistical uncertainty from Table~\ref{tab:data} on the diagonal) and the systematic component $\mat V_{\rm syst}$ (see Eq.~(\ref{eq:covar mat})).
 
 The quality of fits is judged on the basis of several measures. The first is the value of $\chi^2$ after minimisation divided by the number of degrees of freedom (ndf). Secondly, the p-value stands for the probability that a $\chi^2$ value greater than the observed one would be drawn from the $\chi^2$ distribution with the given number of degrees of freedom. Finally, significance means the half-width of a central region that needs to be excluded from a normal distribution to get the same integrated probability as the p-value. The significance is expressed in multiples of sigma, the standard deviation of the normal distribution.
 
