--- a/2014/90m_1km paper/elastic_90m_1km_prl.tex
+++ b/2014/90m_1km paper/elastic_90m_1km_prl.tex
@@ -12,6 +12,8 @@
 \def\unt#1{[{\rm #1}]}
 \def\e{{\rm e}}
 \def\I{{\rm i}}
+\def\mat#1{\mathsf{#1}}
+\def\T{{\rm T}}
 \def\etal{et al.}
 \def\todo#1{{\bf\color{red} #1}}
 
@@ -150,6 +152,28 @@ Finland, the OTKA grant NK 101438, 73143 (Hungary) and the NKTH-OTKA grant 74458
 	\Name{Antchev G.~\etal{}~(TOTEM Collaboration)}
 	The $8\un{TeV}$, $\beta^* = 90\un{m}$ paper
 
+\bibitem{klk02}
+	%title = "Impact parameter structure derived from elastic collisions ",
+	\Name{Kundr\' at, V., Lokaj\' i\v cek, M., Krupa, D.}
+	\REVIEW{Phys.~Lett.~B}{544}{2002}{132--138}
+	%number = "1–2",
+	%doi = "http://dx.doi.org/10.1016/S0370-2693(02)02481-4",
+
+\bibitem{kl96}
+	%title = {DESCRIPTION OF HIGH-ENERGY ELASTIC HADRON SCATTERING IN BOTH THE COULOMB AND HADRONIC DOMAINS},
+	\Name{Kundr\' at, V., Lokaj\' i\v cek, M.}
+	\REVIEW{Mod.~Phys.~Lett.~A}{11}{1996}{2241--2250}
+	%number = {28},
+	%doi = {10.1142/S021773239600223X},
+
+\bibitem{elegent}
+	%title = "Elegent—An elastic event generator ",
+	\Name{Ka\v spar, J.}
+	\REVIEW{Comp.~Phys.~Comm.}{185}{2014}{1081--1084}
+	journal = "Computer Physics Communications ",
+	%number = "3",
+	%doi = "http://dx.doi.org/10.1016/j.cpc.2013.11.016",
+
 \end{thebibliography}{99}
 
 \iffalse
@@ -207,7 +231,7 @@ Finland, the OTKA grant NK 101438, 73143 (Hungary) and the NKTH-OTKA grant 74458
 	%{\tt http://accelconf.web.cern.ch/AccelConf/IPAC2011/papers/mopo011.pdf}
 	arXiv:1110.5808v1
 
-\bibitem{kklp}	
+\bibitem{kklp11}
 	\Name{Ka\v spar, J.~\etal}
 	\REVIEW{Nucl.~Phys.}{B843}{2011}{84}
 
