started updating the analysis part
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@10044 4525493e-7705-40b1-a816-d608a930855b

--- a/2013/1km paper/coulomb.tex
+++ b/2013/1km paper/coulomb.tex
@@ -1,9 +1,11 @@
 \section{Coulomb-Nuclear Interference}
+\label{sec:coulomb}
 
 %----------------------------------------------------------------------------------------------------
 
 \subsection{Theoretical Framework}
 \label{sec:cni_framework}
+
 In this section the different components of the combined elastic scattering amplitude, already briefly outlined in the introduction, are discussed in more detail. In particular, the possible choices for theoretically unknown terms are explained.
 
 %------------------------------------------------------------------
