--- a/2013/1km paper/data_taking.tex
+++ b/2013/1km paper/data_taking.tex
@@ -1,37 +1,6 @@
-\section{Beam optics}
-\label{sec:beam optics}
-
-The beam optics with $\beta^{*} = 1000\,$m
-has been specifically developed for measuring low-$|t|$ elastic scattering.
-Like the previously used $\beta^{*} = 90\,$m optics~\cite{epl96,epl101-el,epl101-tot,prl111},
-this new optics configuration
-provides parallel-to-point focussing in the vertical plane at the RP position 
-$s = 220\un{m}$, implemented by tuning the transport matrix elements via the
-LHC magnet currents: the magnification $v_{y}$ is made to vanish whereas the 
-effective length $L_{y}$ is maximised ($285.6\un{m}$ as compared to $260\un{m}$ for 
-$\beta^{*} = 90\,$m).
-The resulting large displacement of a scattered proton with a given $t$-value 
-away from the beam centre at the RP, together with a very small beam 
-divergence in the interaction point and hence a tiny beam width 
-at the RP ($\sigma_{y} = 260\,\mu$m as compared to 700\,$\mu$m for 
-$\beta^{*} = 90\,$m) translates into 
-an acceptance for $|t|$-values down to $10^{-4}\,\rm GeV^{2}$, provided the 
-vertical RPs can approach the beam centre to only a few nominal beam standard 
-deviations~\footnote{The nominal standard deviation is defined as 
-the beam width for a normalised emittance 
-$\varepsilon \gamma = 3.5\,\mu$m\,rad.}.
-A further improvement relative to $\beta^{*} = 90\,$m is the non-vanishing 
-effective length in the horizontal plane, $L_{x} = 46.8\,$m at $s = 220\,$m, 
-enabling a better reconstruction of the horizontal component of the 
-scattering angle.
-
-\todo{add formulae for proton transport?}
-\todo{add data table with optical values?}
-
-
 \section{Data taking}
-\label{sec:datataking}
-%
+\label{sec:data taking}
+
 The results reported here are based on data taken in October 2012 
 in a dedicated LHC proton fill (3216)
 with very special beam properties. 
@@ -48,7 +17,7 @@ the beam edge and the collimator jaws. With the halo strongly suppressed
 and no collimator producing showers by touching the beam, the RPs at 
 $3\,\sigma_{y}$ were operated in a background-depleted environment for about one 
 hour until the beam-to-collimator gap was refilled by diffusion, as 
-diagnosed by the increasing RP trigger rate (Figure~\ref{fig:overview}, top). As soon as the background conditions
+diagnosed by the increasing RP trigger rate (Figure~\ref{fig:overview}). As soon as the background conditions
 had deteriorated to an unacceptable level, the beam cleaning procedure as described above was repeated, again followed by a quiet data-taking period.
 This entire sequence was iterated 6 times until the luminosity had degraded 
 from initially $1.8\times10^{27}\,\rm cm^{-2}s^{-1}$ to 
@@ -81,10 +50,10 @@ been tagged, respectively.
 
 \begin{figure*}
 \begin{center}
-\includegraphics{fig/overview.pdf}
+\includegraphics{fig/trigger_rate.pdf}
 \vskip-3mm
 \caption{%
-Beam conditions as a function of time from the beginning of the first data-taking day. The T2 rate (blue) is roughly proportional to luminosity, while the RP rate (red) is sensitive to luminosity plus beam-halo. The yellow bands represent periods of uninterrupted data taking.
+Trigger rates as a function of time from the beginning of the run. The T2 rate (blue) is roughly proportional to luminosity, while the RP rate (red) is in addition sensitive to beam-halo level. The yellow bands represent periods of uninterrupted data taking.
 }
 \label{fig:overview}
 \end{center}
