--- a/2013/1km paper/experimental_apparatus.tex
+++ b/2013/1km paper/experimental_apparatus.tex
@@ -1,5 +1,6 @@
 \section{Experimental Apparatus}
-%
+\label{sec:exp apparatus}
+
 The TOTEM experiment, located at the LHC Interaction Point (IP) 5 together with
 the CMS experiment, is dedicated to the measurement of the total 
 cross-section, elastic scattering
@@ -29,5 +30,4 @@ with a precision of about $10\,\mu$rad, and a high trigger efficiency
 ($> 99$\%) can be achieved as the proton trigger selection
 uses all RPs independently. Since elastic scattering events consist of two anti-parallel protons, the detected events can have two topologies, called diagonals: 45 bottom -- 56 top and 45 top -- 56 bottom.
 
-This report will use a reference frame where $x$ denotes the horizontal axis (pointing out of the LHC ring) and $y$ the vertical axis (pointing against gravity).
-
+This report will use a reference frame where $x$ denotes the horizontal axis (pointing out of the LHC ring), $y$ the vertical axis (pointing against gravity) and $z$ the beam axis (in the clockwise direction).
