--- a/2013/1km paper/introduction.tex
+++ b/2013/1km paper/introduction.tex
@@ -1,5 +1,6 @@
 \section{Introduction}
-%
+\label{sec:introduction}
+
 Elastic scattering of protons is a process mediated by the strong and the electromagnetic interactions -- the weak interaction can be neglected since its carriers are heavy compared to the small momentum transfers, $|t|$, typical for elastic scattering. In this context, the strong interaction is traditionally called nuclear and the electromagnetic called Coulomb. In quantum-theory description, each of the interactions is described by a complex scattering amplitude, nuclear ${\cal A}^{\rm N}$ and Coulomb ${\cal A}^{\rm C}$. Moreover, the superposition 
 of the two amplitudes generates an interference term in the combined interaction cross-section. 
 Since the Coulomb amplitude is known, the Coulomb-nuclear interference (CNI) exposes the phase of the nuclear amplitude, which is necessary for a complete understanding of the interaction but not directly observable in the pure hadronic differential cross-section. The interference effect is most pronounced in the $t$-region where the two amplitudes have similar magnitudes, i.e. -- for typical LHC centre-of-mass energies of a few TeV -- near $t \sim 5 \times 10^{-4}\,\rm GeV^{2}$. Thus the experimental sensitivity to 
@@ -21,7 +22,7 @@ relations~\cite{dremin-dispersion}.
 The present article discusses the first measurement of elastic scattering in the
 CNI region at the CERN LHC by the TOTEM experiment. 
 The data have been collected at $\sqrt{s} = 8\,$TeV with a special beam optics 
-($\beta^{*}=1000\,$m, see Section~\ref{sec:datataking}) and cover a $|t|$-interval
+($\beta^{*}=1000\,$m, see Section~\ref{sec:beam optics}) and cover a $|t|$-interval
 from $6\times10^{-4}\,\rm GeV^{2}$ to 0.2\,GeV$^{2}$, thus overlapping comfortably
 with another data set taken at the same energy but with different beam optics
 ($\beta^{*}=90\,$m; 0.027\,GeV$^{2} < |t| < 0.2\,$GeV$^{2}$). The analysis of the
@@ -35,12 +36,6 @@ and phase. Since the data cannot unambiguously determine all functional forms an
 expressed in terms of $\rho$, become conditional to the choice of amplitude models. Each of these choices implies a different behaviour of the interaction in impact parameter space, as discussed in Section~...
 \textbf{[not yet written!!!]}.
 
-In order to optimally exploit the information of all available data, the two 
-data sets are analysed in a combined way, providing complementary constraints:
-The $\beta^{*}=90\,$m set with very high statistics at higher $|t|$ fixes the 
-hadronic modulus, whereas the $\beta^{*}=1000\,$m set with its reach to very low
-$|t|$ determines phase parameters.
-
 
 
 
@@ -51,3 +46,18 @@ $|t|$ determines phase parameters.
 %\> historical context, previous measurements
 %
 %\> explain structure: first 1000m measurement, then CNI analysis (where also 90m data will be used)
+
+The paper is organised as follows.
+\begin{itemize}
+\item Section\ref{sec:exp apparatus} outlines the experimental setup used for the presented measurement.
+\item Section\ref{sec:beam optics} describes the properties of the special beam optics.
+\item Section\ref{sec:data taking} gives details of the data-taking conditions.
+\item Section\ref{sec:differential cross-section} describes the data analysis and reconstruction of the differential cross-section.
+\item Section\ref{sec:coulomb}: study of the Coulomb-nuclear interference (+ link to the next paragraph?)
+\end{itemize}
+
+In order to optimally exploit the information of all available data, the two 
+data sets are analysed in a combined way, providing complementary constraints:
+The $\beta^{*}=90\,$m set with very high statistics at higher $|t|$ fixes the 
+hadronic modulus, whereas the $\beta^{*}=1000\,$m set with its reach to very low
+$|t|$ determines phase parameters.
