--- a/2013/1km paper/differential_cross_section.tex
+++ b/2013/1km paper/differential_cross_section.tex
@@ -1,28 +1,29 @@
 \section{Differential Cross-Section}
+\label{sec:differential cross-section}
 
-The analysis method is very similar to the previously published ones \cite{epl101-el,prl111}. Each diagonal is analysed separately, some steps are performed independently for each bunch. In this analysis, however, a different normalisation approach is used, consequently making all $t$-independent scaling factors (e.g.~certain inefficiency corrections) irrelevant.
+The analysis method is very similar to the previously published one \cite{8tev-90m} and is presented in two main blocks. Section~\ref{sec:event analysis} covers all aspects related to the reconstruction of a single event. Section~\ref{sec:diff cs} describes the steps of transforming a raw $t$-distribution into the differential cross-section. The $t$-distributions for the two diagonals are analysed separately. After comparison (Section~\ref{sec:cross checks}) they are finally merged (Section~\ref{sec:final data merging}).
 
 %----------------------------------------------------------------------------------------------------
 \subsection{Event Analysis}
+\label{sec:event analysis}
 
-Event kinematics is determined from track hits in RPs (after proper alignment, see Sec.~\ref{sec:alignment}) using the LHC optics (see Sec.~\ref{sec:optics}).
+Event kinematics are determined from track hits in RPs (after proper alignment, see Sec.~\ref{sec:alignment}) using the LHC optics (see Sec.~\ref{sec:optics}).
 
 %------------------------------
 
 \subsubsection{Kinematics Reconstruction}
 \label{sec:kinematics}
 
-The protons' kinematics is first reconstructed separately in each arm, using formulae that maximise the robustness against imperfections (predominantly optics):
-%guide for reconstruction formulae = robustness against error sources: beam divergence, sensor pitch, misalignment, vertex term neglected, optics imperfections
+The scattering angles and vertex position are first determined for each proton (i.e.~from each arm) separately by inverting the proton transport, Eq.~(\ref{eq:prot trans}), assuming $\xi = 0$. The following formulae optimise the robustness against optics imperfections:
 \begin{equation}
 \label{eq:kin 1a}
 	\begin{aligned}
-		\theta_x^* &= {v_x^{\rm N} x^{\rm F} - v_x^{\rm F} x^{\rm N}\over v_x^{\rm N} L_x^{\rm F} - v_x^{\rm F} L_x^{\rm N}}\ ,\qquad
-		\theta_y^* = {1\over 2} \left( {y^{\rm N}\over L_y^{\rm N}} + {y^{\rm F}\over L_y^{\rm F}} \right)\ ,\\
-		x^* &= {L_x^{\rm N} x^{\rm F} - L_x^{\rm F} x^{\rm N}\over L_x^{\rm N} v_x^{\rm F} - L_x^{\rm F} v_x^{\rm N}}\ , \\
+		\theta_x^{*\rm L,R} &= {v_x^{\rm N} x^{\rm F} - v_x^{\rm F} x^{\rm N}\over v_x^{\rm N} L_x^{\rm F} - v_x^{\rm F} L_x^{\rm N}}\ ,\quad
+		\theta_y^{*\rm L,R} = {1\over 2} \left( {y^{\rm N}\over L_y^{\rm N}} + {y^{\rm F}\over L_y^{\rm F}} \right)\ ,\\
+		x^{*\rm L,R} &= {L_x^{\rm N} x^{\rm F} - L_x^{\rm F} x^{\rm N}\over L_x^{\rm N} v_x^{\rm F} - L_x^{\rm F} v_x^{\rm N}}\ , \\
 	\end{aligned}
 \end{equation}
-where the N and F superscripts refer to the near and far units, $x$ and $y$ to horizontal and vertical track hits and $v$ and $L$ stand for the magnification and effective length optical functions. This reconstruction is used for tagging elastic events, where the left and right arm protons are compared.
+where the N and F superscripts refer to the near and far units, L and R to the left and right arm, respectively. This one-arm reconstruction is used for tagging elastic events, where the left and right arm protons are compared.
 
 Once an event is selected, all four RPs can be used to reconstruct the kinematics of the event, in addition optimising for angular resolution (see Section \ref{sec:resolution}):
 \begin{equation}
@@ -50,45 +51,75 @@ where $p$ denotes the beam momentum.
 \subsubsection{Alignment}
 \label{sec:alignment}
 
-The standard three-step procedure \cite{totem-ijmp} has been applied: collimator-like beam-based alignment prior to physics data taking, track-based alignment (relative among RPs) and alignment with elastic events (absolute with respect to the beam). The procedure has been further extended to improve the vertical alignment. The new steps exploit the fact that the elastic scattering with its two anti-collinear protons can relate the alignment in the left and right arm (with an uncertainty of $20\un{\mu m}$). Furthermore, the horizontal RPs in the right arm recorded a hit distribution usable for vertical alignment in addition to the standard technique based on the vertical RPs. Together, the two methods reduce the uncertainty to about $70\un{\mu m}$. The horizontal alignment and rotation about the beam have been determined by the standard approach, with uncertainties $30\un{\mu m}$ and $2\un{m rad}$, respectively. Propagating the uncertainties to the reconstructed angles, Eq.~(\ref{eq:kin 2a}), gives $0.28\un{\mu rad}$ ($0.19\un{\mu rad}$) for horizontal (vertical) angle. The error of the RP rotations would bias the reconstructed $\theta_x^*$ by a term proportional to $\theta_y^*$, with the proportionality constant having standard deviation $0.005$.
+The standard three-stage procedure \cite{totem-ijmp} has been applied: beam-based alignment prior to the run (as for LHC collimators) followed by two off-line methods. First, track-based alignment for relative positions among RPs, and second, alignment with elastic events for absolute position with respect to the beam (performed in 15 minutes time periods to check for possible beam movements).
 
-% the observed hit inefficiencies -- possible asymmetries -- discuss ???
-% mention final alignment check = 2D Gaussian fit of $\theta_x^*$ vs.~$\theta_y^*$ from both diagonals ??
+This procedure has been further extended to improve the vertical alignment. The new steps exploit the fact that the elastic scattering with its two anti-collinear protons can relate the alignment in the left and right arm (with an uncertainty of $20\un{\mu m}$). Furthermore, the horizontal RPs in the right arm recorded a hit distribution usable for vertical alignment in addition to the standard technique based on the vertical RPs, see Figure~\ref{fig:align meth}.
 
 \begin{figure}
 \begin{center}
 \includegraphics{fig/alignment_method.pdf}
 \caption{%
-\todo{caption}. Right-far unit, data from 1 period (= 15 minutes). Black (blue) dots and solid lines represent track hits and sensor shape of vertical (horizontal) RPs. The magenta histogram shows the profile of hits in the vertical RPs, the cyan line represents its interpolation between the top and bottom pots. Similarly, the red histogram gives the profile of the hits in the horizontal RP and the green line its extrapolation to the beam region.
+Hit scatter plot in the right-far unit, corresponding to a period of 15 minutes. Black (blue) dots and solid lines represent track hits and sensor contours of vertical (horizontal) RPs. Track hits close to the sensor edges are discarded because of possible bias due to acceptance effects.
+The magenta histogram shows the horizontal profile of hits in the vertical RPs, the dashed magenta line interpolates the profiles between the top and bottom RPs. Similarly, the red histogram gives the vertical profile of the hits in the horizontal RP and the dashed red line its extrapolation to the beam region. The green dashed line indicates the vertical centre of symmetry of the hits in the vertical RPs (see \cite{totem-ijmp} for details). The crossing of the dashed lines represents the position the beam centre.
 }
 \label{fig:align meth}
 \end{center}
 \end{figure}
 
+Exploiting all the methods, the alignment uncertainties have been estimated to $30\un{\mu m}$ (horizontal shift), $70\un{\mu m}$ (vertical shift) and $2\un{m rad}$ (rotation about the beam axis). Propagating them through Eq.~(\ref{eq:kin 2a}) to reconstructed scattering angles yields gives $0.28\un{\mu rad}$ ($0.19\un{\mu rad}$) for horizontal (vertical) angle. RP rotations induce a bias in the reconstructed horizontal scattering angle:
+\begin{equation}
+\label{eq:alig rot bias}
+	\theta_x^* \rightarrow \theta_x^* + c \theta_y^*\ ,
+\end{equation}
+where the proportionality constant $c$ has a standard deviation of $0.005$.
+
+
+% the observed hit inefficiencies -- possible asymmetries -- discuss ???
+% mention final alignment check = 2D Gaussian fit of $\theta_x^*$ vs.~$\theta_y^*$ from both diagonals ??
+
+
 %------------------------------
 
 \subsubsection{Optics}
 \label{sec:optics}
-%
-In order to reduce the impact of imperfect optics knowledge, the optics matching technique~\cite{totem-optics} has been applied. The residual imperfections induce an error in the reconstructed scattering angle proportional to the angle. For the two-arm reconstruction, Eq.~(\ref{eq:kin 2a}), the proportionality constants have uncertainties of $0.34\un{\%}$ (horizontal) and $0.25\un{\%}$ (vertical), including the effects of magnet harmonics.
+In order to reduce the impact of imperfect optics knowledge, the optics matching technique \cite{totem-optics} has been applied. This method uses various RP observables to determine fine corrections to the optical functions presented in Eq.~(\ref{eq:prot trans}).
+
+The residual errors induce a bias in the reconstructed scattering angles:
+\begin{equation}
+\label{eq:opt bias}
+	\theta_x^* \rightarrow (1 + d_x)\, \theta_x^*\ ,\qquad
+	\theta_y^* \rightarrow (1 + d_y)\, \theta_y^*\ .
+\end{equation}
+For the two-arm reconstruction, Eq.~(\ref{eq:kin 2a}), the biases $d_x$ and $d_y$ have uncertainties of $0.34\un{\%}$ and $0.25\un{\%}$, respectively, and correlation factor of $-0.89$. These estimates include the effects of magnet harmonics. For evaluating the impact on the $t$-distribution, it is convenient to decompose the correlated biases $d_x$ and $d_y$ into eigenvectors of the covariance matrix:
+\begin{equation}
+\label{eq:opt bias modes}
+\begin{pmatrix} d_x\cr d_y \end{pmatrix} =
+	\eta_1 \underbrace{\begin{pmatrix} +0.338\un{\%} \cr -0.234\un{\%} \end{pmatrix}}_{\rm mode\ 1}
+	\ +\ \eta_2 \underbrace{\begin{pmatrix} -0.053\un{\%} \cr -0.076\un{\%} \end{pmatrix}}_{\rm mode\ 2}
+\end{equation}
+normalised such that the factors $\eta_{1,2}$ have unit variance.
+
+%	mode 0			mode 1
+%	3.382E-03		-5.278E-04
+%	-2.343E-03		-7.618E-04
 
 %------------------------------
 
 \subsubsection{Resolution}
 \label{sec:resolution}
 
-Good knowledge of statistical fluctuations in the event reconstruction is essential for several steps in differential cross-section evaluation.
+\TODO{Which plots interesting?}
 
-The fluctuations in $\theta_y^*$ are mostly due to the beam divergence and can be studied by comparing the angles reconstructed from the left and right arm. If the divergences of the two beams are the same (verified by emittance measurements with uncertainty of $25\un{\%}$), then the beam divergence distribution can be de-convoluted from the distribution of the left-right differences. The beam divergence has shown very small deviations from Gaussian shape, \todo{decreasing width with time?}. The $\theta_y^*$ (Eq.~(\ref{eq:kin 2a})) resolution degraded from initial $0.43$ to $0.48\un{\mu rad}$ at the end of the fill.
+The statistical fluctuations in $\theta_y^*$ are mostly due to the beam divergence and can be studied by comparing the angles reconstructed from the left and right arm. If the divergences of the two beams are the same (verified by emittance measurements with uncertainty of $25\un{\%}$), then the beam divergence distribution can be de-convoluted from the distribution of the left-right differences. The beam divergence has shown very small deviations from Gaussian shape, \TODO{decreasing width with time?}. The $\theta_y^*$ (Eq.~(\ref{eq:kin 2a})) resolution degraded from initial $0.43$ to $0.48\un{\mu rad}$ at the end of the fill.
 
-In the horizontal projection, a different method is used since the one-arm reconstruction, Eq.~(\ref{eq:kin 1a}), is strongly influenced by sensor resolution (strip pitch). First, the beam divergence is estimated by dividing the vertex spread $\sigma(x^*)$ by $\beta^*$: it grew from $0.75$ to $0.9\un{\mu rad}$ during the fill. Then the beam-divergence component is subtracted quadratically \todo{check} 
-from the standard deviation of the right-left difference in $\theta_x^*$, yielding the (time-independent \todo{experimentally verified}) contribution from the sensor resolution: $10.7\un{\mu m}$ (45 top -- 56 bottom) and $12.1\un{\mu m}$ (45 bottom -- 56 top). This can be propagated to the two-arm resolution in $\theta_x^*$, Eq.~({\ref{eq:kin 2a}}), which is by far dominated by the beam divergence component: it rose from $0.54$ to $0.65\un{\mu rad}$ during the fill. 
+In the horizontal projection, a different method is used since the one-arm reconstruction, Eq.~(\ref{eq:kin 1a}), is strongly influenced by sensor resolution (strip pitch). First, the beam divergence is estimated by dividing the vertex spread $\sigma(x^*)$ by $\beta^*$: it grew from $0.75$ to $0.9\un{\mu rad}$ during the fill. Then the beam-divergence component is subtracted quadratically \TODO{check} 
+from the standard deviation of the right-left difference in $\theta_x^*$, yielding the (time-independent \TODO{experimentally verified}) contribution from the sensor resolution: $10.7\un{\mu m}$ (45 top -- 56 bottom) and $12.1\un{\mu m}$ (45 bottom -- 56 top). This can be propagated to the two-arm resolution in $\theta_x^*$, Eq.~({\ref{eq:kin 2a}}), which is by far dominated by the beam divergence component: it rose from $0.54$ to $0.65\un{\mu rad}$ during the fill. 
 
 \begin{figure}
 \begin{center}
 \includegraphics{fig/resolutions_vs_time.pdf}
 \caption{%
-\todo{final two-arm resolutions}. The yellow bands indicate regions of uninterrupted data-taking.
+\TODO{final two-arm resolutions}. The yellow bands indicate regions of uninterrupted data-taking.
 }
 \label{fig:resol final}
 \end{center}
@@ -98,11 +129,11 @@ from the standard deviation of the right-left difference in $\theta_x^*$, yieldi
 \subsection{Differential Cross-Section Reconstruction}
 \label{sec:diff cs}
 
-For a given $t$ bin, the value of differential cross-section is evaluated by selecting and counting elastic events:
+For a given $t$ bin, the differential cross-section is evaluated by selecting and counting elastic events:
 \begin{equation}
 {\d\sigma\over \d t}(\hbox{bin}) =
 	{\cal N}\, {\cal U}({\rm bin})\, {\cal B}\ 
-	{\sum\limits_{t \in \hbox{bin}} {\cal A}(\theta^*, \theta_y^*)\, {\cal E}(\theta_y^*)\over \Delta t}\ ,
+	{\sum\limits_{t \in \hbox{bin}} {\cal A}(\theta^*, \theta_y^*)\ {\cal E}(\theta_y^*)\over \Delta t}\ ,
 \end{equation}
 where $\Delta t$ is the width of the bin, ${\cal N}$ is a normalisation factor and the other symbols stand for various correction factors:
  ${\cal U}$ for unfolding of resolution effects, ${\cal B}$ for background subtraction, ${\cal A}$ for acceptance correction and ${\cal E}$ for detection and reconstruction efficiency.
@@ -112,12 +143,8 @@ where $\Delta t$ is the width of the bin, ${\cal N}$ is a normalisation factor a
 \subsubsection{Event Tagging}
 \label{sec:tagging}
 
-The cuts used to select the elastic events are summarised in Table~\ref{tab:cuts}, all are applied at $4\sigma$-level. Cuts 1 and 2 require the reconstructed-track collinearity between the left and right arm. Cut 3 ensures that the protons come from the same vertex (horizontally). Thanks to the very low beam divergence, the collinearity cuts are very stringent, and consequently the other conceivable cuts (cf. Table~2 in~\cite{epl101-el}) bring no significant improvement.
-
-The tagging efficiency has been studied by applying the cuts also at the $5\un{\sigma}$-level. This selection has yielded $0.3\un{\%}$ more events in every $|t|$-bin. This kind of inefficiency therefore only contributes a global factor and is irrelevant for the presented analysis because the normalisation is taken from a different data set (cf. Section~\ref{sec:normalisation}).
-
 \begin{table}
-\caption{The elastic selection cuts. The superscripts R and L refer to the right and left arm. The $\alpha \theta_x^*$ term in cut 3 is intended to absorb possible effects of residual optics imperfections \todo{[update at the end; give $\alpha$ value]}. The right-most column gives a typical RMS of the cut distribution.
+\caption{The elastic selection cuts. The superscripts R and L refer to the right and left arm. The $\alpha \theta_x^*$ term in cut 3 is intended to absorb possible effects of residual optics imperfections \TODO{[update at the end; give $\alpha$ value]}. The right-most column gives a typical RMS of the cut distribution.
 }
 \label{tab:cuts}
 \begin{center}
@@ -131,13 +158,20 @@ number & cut & RMS ($\equiv 1\sigma$)\cr\hline
 \end{center}
 \end{table}
 
+The cuts used to select the elastic events are summarised in Table~\ref{tab:cuts}. Cuts 1 and 2 require the reconstructed-track collinearity between the left and right arm. Cut 3 ensures that the protons come from the same vertex (horizontally). The correlation plots corresponding to these cuts are shown in Figure~\ref{fig:cuts}. Thanks to the very low beam divergence, the collinearity cuts are very powerful, and consequently the other conceivable cuts (cf. Table~2 in~\cite{epl101-el}) bring no significant improvement.
+
+All are applied at $4\sigma$-level - \TODO{Why}.
+
+The tagging efficiency has been studied by applying the cuts also at the $5\un{\sigma}$-level. This selection has yielded $0.3\un{\%}$ more events in every $|t|$-bin. This kind of inefficiency therefore only contributes to a global scale factor and is irrelevant for the presented analysis because the normalisation is taken from a different data set (cf. Section~\ref{sec:normalisation}).
+
+
 \begin{figure}
 \begin{center}
 \includegraphics{fig/cuts.pdf}
 \caption{%
-\todo{DS2b, 45t -- 56b, cuts from Table~\ref{tab:cuts}}
+Correlation plots for the event selection cuts presented in Table~\ref{tab:cuts}, showing events with diagonal topology 45 top -- 56 bottom.
 }
-\label{fig:tag corr plots}
+\label{fig:cuts}
 \end{center}
 \end{figure}
 
@@ -147,7 +181,7 @@ number & cut & RMS ($\equiv 1\sigma$)\cr\hline
 \subsubsection{Background}
 \label{sec:background}
 
-To study the background (i.e.~impurity of the tagging), the distributions of right-left angular differences (see Table \ref{tab:cuts}) are plotted under various cut combinations \todo{vague}. While the central part (signal) remains essentially constant, the tails (background) are dramatically affected. Interpolating the background smoothly into the signal region ($\pm 4\un{\sigma}$) permits to conclude negligible background: $1 - {\cal B} < 0.1\un{\%}$ (independent of whether the $\theta_x^*$ or the $\theta_y^*$ distribution is used). As an additional test, if a cut is released, the recuperated events (less than $0.3\un{\%}$) are distributed almost uniformly over the $|t|$ range.
+To study the background (i.e.~impurity of the tagging), the distributions of right-left angular differences (see Table \ref{tab:cuts}) are plotted under various cut combinations \TODO{vague}. While the central part (signal) remains essentially constant, the tails (background) are dramatically affected. Interpolating the background smoothly into the signal region ($\pm 4\un{\sigma}$) permits to conclude negligible background: $1 - {\cal B} < 0.1\un{\%}$ (independent of whether the $\theta_x^*$ or the $\theta_y^*$ distribution is used). As an additional test, if a cut is released, the recuperated events (less than $0.3\un{\%}$) are distributed almost uniformly over the $|t|$ range.
 
 % background = impurity of the cuts above
 
@@ -155,7 +189,7 @@ To study the background (i.e.~impurity of the tagging), the distributions of rig
 \begin{center}
 \includegraphics{fig/cut_distributions.pdf}
 \caption{%
-\todo{DS2b, 45t -- 56b, cuts from Table~\ref{tab:cuts}}
+\TODO{DS2b, 45t -- 56b, cuts from Table~\ref{tab:cuts}}
 }
 \label{fig:tag bckg}
 \end{center}
@@ -195,7 +229,9 @@ The final acceptance correction combines the two contributions:
 \begin{center}
 \includegraphics{fig/acc_corr_phi_lab.pdf}
 \caption{%
-\todo{DS2b, top (bottom) part from diagonal 45 bot -- 56 top (45 top -- 56 bot)}
+\TODO{DS2b, top (bottom) part from diagonal 45 bot -- 56 top (45 top -- 56 bot)}
+\TODO{red = LHC apertures, blue = sensor edges, magenta = horizontal RPs}
+\TODO{central theta in urad}
 }
 \label{fig:acc corr princ}
 \end{center}
@@ -206,7 +242,7 @@ The final acceptance correction combines the two contributions:
 \begin{center}
 \includegraphics{fig/acc_corr_hist_lab.pdf}
 \caption{%
-\todo{DS2b, 45 top -- 56 bot, control the numbers, mean correction per bin + std.~dev. per bin}
+\TODO{DS2b, 45 top -- 56 bot, control the numbers, mean correction per bin + std.~dev. per bin}
 }
 \label{fig:acc corr res}
 \end{center}
@@ -247,7 +283,7 @@ where the first term in parentheses typically grows from about $16$ to $18\un{\%
 \begin{center}
 \includegraphics{fig/eff3outof4_fits.pdf}
 \caption{%
-\todo{DS2b, 45t -- 56b, right near}
+\TODO{DS2b, 45t -- 56b, right near}
 }
 \label{fig:eff 3/4}
 \end{center}
@@ -259,7 +295,7 @@ where the first term in parentheses typically grows from about $16$ to $18\un{\%
 \subsubsection{Unfolding of Resolution Effects}
 \label{sec:unfolding}
 
-\todo{numerical integration method, in principle similar method as in the 90m paper, but different implementation with better performance}
+\TODO{numerical integration method, in principle similar method as in the 90m paper, but different implementation with better performance}
 
 Due to the very small beam divergence, the correction for resolution effects can be safely determined by the following iterative procedure. The differential cross-section data are fitted by a smooth curve which serves as an input to a Monte-Carlo simulation using the resolution parameters determined above. Making a ratio of simulated histograms with / without smearing effects gives a set of per-bin correction factors. Applying them to the yet uncorrected differential cross-section yields a better estimate of the true $t$-distribution, which can be used as input to the next iteration. The final correction is negligible (${\cal U} \approx 1$) for all bins except at very low $|t|$ where the rapid cross-section growth occurs ($ {\cal U} - 1 < 2.5\un{\%}$).
 
@@ -272,7 +308,7 @@ For the uncertainty estimate, the uncertainties of $\theta_x^*$ and $\theta_y^*$
 \caption{%
 Unfolding correction for diagonal 45 bottom -- 56 top is negligible everywhere except the very low-$|t|$ region. The vertical dashed line indicates the position of the acceptance cut.
 }
-\label{fig:align meth}
+\label{fig:unfolding}
 \end{center}
 \end{figure}
 
@@ -281,7 +317,7 @@ Unfolding correction for diagonal 45 bottom -- 56 top is negligible everywhere e
 \subsubsection{Normalisation}
 \label{sec:normalisation}
 
-The normalisation ${\cal N}$ is determined by requiring the same cross-section integral between $|t| = 0.014$ and $0.203\un{GeV^2}$ as for dataset 1 from \cite{prl111}, where the luminosity-independent calibration was applied. The leading uncertainty of $4.2\un{\%}$ in the scaling factor comes from the luminosity-independent method.
+The normalisation ${\cal N}$ is determined by requiring the same cross-section integral between $|t| = 0.014$ and $0.203\un{GeV^2}$ as for dataset 1 from \cite{prl111}, where the luminosity-independent calibration was applied. The leading uncertainty of the scaling factor $4.2\un{\%}$ comes from the luminosity-independent method.
 % transfer negligible ($0.5\un{\%}$).
 % stat: 0.3%, syst: 0.3% (DS2 at 90m), 0.3% (1km)
 
@@ -316,7 +352,7 @@ Compatible results have been obtained from data originating from different bunch
 \subsection{Final Data Merging}
 \label{sec:final data merging}
 
-Eventually, the differential cross-section histograms from both diagonals are merged. This is accomplished by a per-bin weighted average, with the weight given by inverse squared statistical uncertainty. The statistical and systematic uncertainties are propagated accordingly. For the systematic ones, the correlation between the diagonals is taken into account. For example the vertical (mis-)alignment of the RPs within one unit is almost fully correlated, thus the effect on differential cross-section is opposite in the two diagonals and consequently its impact is strongly reduced once the diagonals are merged.
+Finally, the differential cross-section histograms from both diagonals are merged. This is accomplished by a per-bin weighted average, with the weight given by inverse squared statistical uncertainty. The statistical and systematic uncertainties are propagated accordingly. For the systematic ones, the correlation between the diagonals is taken into account. For example the vertical (mis-)alignment of the RPs within one unit is almost fully correlated, thus the effect on differential cross-section is opposite in the two diagonals and consequently its impact is strongly reduced once the diagonals are merged.
 
 The final cross-section is tabulated in Table~\ref{tab:data} and visualised in Figure~\ref{fig:dsdt}. The figure clearly shows a rapid cross-section rise below $|t| \lesssim 0.002\un{GeV^2}$, which will later be interpreted as an effect due to electromagnetic interaction.
 
@@ -339,7 +375,7 @@ where the $\vec v_i$'s represent the uncertainty vectors (columns) from the tabl
 \includegraphics[width=18cm]{fig/t_dist_tabulation.pdf}
 \vskip-3mm
 \caption{%
-Differential cross-section from Table \ref{tab:data} with statistical (bars) and systematic uncertainties (bands). The blue band represents all systematic uncertainties, the yellow one all but normalisation. LEFT: a low-$|t|$ zoom of the differential cross-section, with the rise due to the Coulomb interaction clearly visible. RIGHT: differential cross-section over the full $|t|$ range plotted relative to a reference exponential.
+Differential cross-section from Table \ref{tab:data} with statistical (bars) and systematic uncertainties (bands). The blue band represents all systematic uncertainties, the yellow one all but normalisation \TODO{how centred}. LEFT: a low-$|t|$ zoom of the differential cross-section, with the rise due to the Coulomb interaction clearly visible. RIGHT: differential cross-section over the full $|t|$ range plotted relative to a reference exponential.
 }
 \label{fig:dsdt}
 \end{center}
